--- a/scripts/map.html
+++ b/scripts/map.html
@@ -106,7 +106,7 @@
 				// ----------------------
 	  		var listener = new ROSLIB.Topic({
 	    		ros : ros,
-	    		name : '/android/fix',
+	    		name : '/android/fix_filter',
 	    		messageType : 'sensor_msgs/NavSatFix'
 	  		});
 
